feat: implement post scheduling and history tracking functionality